// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsCountHandler Tests renders the ItemsCountHandler component 1`] = `
Object {
  "children": Array [
    <svg
      className="sc-ipEyDJ fbIxLm"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
      />
    </svg>,
    <span>
      Add
    </span>,
  ],
  "props": Object {
    "className": "sc-bcXHqe sc-eDvSVe sc-gKPRtg fAfvZN fwWQTF gmBSoV",
    "onClick": [Function],
  },
  "type": "button",
}
`;

exports[`ItemsCountHandler Tests renders the ItemsCountHandler component with items 1`] = `
Object {
  "children": Array [
    <svg
      className="sc-pyfCe iRcGGc"
      data-testid="itemsHandlerMinus"
      disabled={true}
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
        fillRule="evenodd"
      />
    </svg>,
    <span
      className="sc-kDvujY gwWHgA"
    >
      13
    </span>,
    <svg
      className="sc-jrcTuL qIHjZ"
      data-testid="itemsHandlerPlus"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 20 20"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
        fillRule="evenodd"
      />
    </svg>,
  ],
  "props": Object {
    "className": "sc-ftTHYK kVxvuz",
  },
  "type": "section",
}
`;
